[tool.coverage.run]
branch = true
source = ['pyAttention']
omit = ['setup.py', 'docs/*', '.tox/*']

[tool.poetry]
name = "pyAttention"
version = "0.1.0"
description = ""
authors = ["dhrone <ron@ritchey.org>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = {version = "^4.6.1", extras = ["client"]}
psutil = "^5.8.0"
netifaces = "^0.10.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
httpx = "^0.17.0"
SQLAlchemy = "^1.4.4"
aiosqlite = "^0.17.0"
asyncpg = "^0.22.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
coverage = "^5.5"
pytest-cov = "^2.11.1"
isort = "^5.8.0"
black = "^20.8b1"
darglint = "^1.7.0"
rstcheck = "^3.3.1"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -v --cov=pyAttention --cov-report term --cov-report html"
testpaths = [
  "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
