[tool.coverage.run]
branch = true
source = ['pyAttention']
omit = ['setup.py', 'docs/*', '.tox/*']

[tool.poetry]
name = "pyAttention"
version = "0.1.0"
description = "A library to monitor information sources"
authors = ["dhrone <dhrone@dhrone.xyz>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dhrone/pyAttention"
repository = "https://github.com/dhrone/pyAttention"
keywords = ["pyAttention", "data", "database", "rss", "sql", "socketio", "websocket", "volumio", "mpd"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = {version = "^4.6.1", extras = ["client"]}
psutil = "^5.8.0"
netifaces = "^0.10.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
httpx = "^0.17.0"
SQLAlchemy = "^1.4.4"
aiosqlite = "^0.17.0"
asyncpg = "^0.22.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
coverage = "^5.5"
pytest-cov = "^2.11.1"
isort = "^5.8.0"
black = "^20.8b1"
darglint = "^1.7.0"
rstcheck = "^3.3.1"
ipython = "^7.24.1"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra -v --cov=pyAttention --cov-report term --cov-report html"
testpaths = [
  "tests"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
