[tool.poetry]
name = "pyAttention"
version = "0.1.0"
description = ""
authors = ["dhrone <ron@ritchey.org>"]

[tool.poetry.dependencies]
python = "^3.8"
python-socketio = {version = "^4.6.1", extras = ["client"]}
aiohttp = "^3.7.4"
psutil = "^5.8.0"
netifaces = "^0.10.9"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"
httpx = "^0.17.0"
SQLAlchemy = "^1.4.4"
aiosqlite = "^0.17.0"
coverage = "^7.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
